--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Kimberly Grace</title>
-    <link rel="stylesheet" href="index-style.css">
+    <link rel="stylesheet" href="style-index.css">
   </head>
   <body>
     <h1>Kimberly Grace Theater Company</h1>
